Added placeholders for home page

--- a/frontend/TODO
+++ b/frontend/TODO
@@ -1,3 +1,16 @@
+☐ $25 button (wait for Scott's verbiage) [https://fixr.co/event/25-donation-to-azuay-community-theater-tickets-618404995]
+✔ (in database) change paypal confirmation email to actseats.com @done(25-09-04 19:56)
+✔ set up 2025-26 season @done(25-09-04 14:40)
+✔ add flex link to season page @done(25-09-04 14:40)
+✔ flex tix [https://fixr.co/event/flex-ticket-6-admissions-for-75-to-regular-2025-26-tickets-87475505] @done(25-09-04 14:39)
+☐ add all the new shows to the site with proper display dates & their copy text
+
+---
+
+✔ set up an announcement banner on home page @done(25-09-05 15:23)
+☐ setup admin for announcement banner
+☐ need /flex-purchase page
+
 ☐ Set up Join Mailing List
 
 ☐ add an "audition" button to admin/edit-show to allow admin to set audition information for that show
