--- a/frontend/TODO
+++ b/frontend/TODO
@@ -1,14 +1,9 @@
 ☐ $25 button (wait for Scott's verbiage) [https://fixr.co/event/25-donation-to-azuay-community-theater-tickets-618404995]
-✔ (in database) change paypal confirmation email to actseats.com @done(25-09-04 19:56)
-✔ set up 2025-26 season @done(25-09-04 14:40)
-✔ add flex link to season page @done(25-09-04 14:40)
-✔ flex tix [https://fixr.co/event/flex-ticket-6-admissions-for-75-to-regular-2025-26-tickets-87475505] @done(25-09-04 14:39)
-☐ add all the new shows to the site with proper display dates & their copy text
 
 ---
 
 ✔ set up an announcement banner on home page @done(25-09-05 15:23)
-☐ setup admin for announcement banner
+✔ setup admin for announcement banner @done(25-09-14 10:44)
 ✔ need /flex-purchase page @done(25-09-14 05:36)
 
 ☐ Set up Join Mailing List
