Set up join mailing list

--- a/frontend/TODO
+++ b/frontend/TODO
@@ -6,7 +6,7 @@
 ✔ setup admin for announcement banner @done(25-09-14 10:44)
 ✔ need /flex-purchase page @done(25-09-14 05:36)
 
-☐ Set up Join Mailing List
+✔ Set up Join Mailing List @done(25-09-14 21:56)
 
 ☐ add an "audition" button to admin/edit-show to allow admin to set audition information for that show
 
