--- a/frontend/TODO
+++ b/frontend/TODO
@@ -12,7 +12,7 @@ Read Only:
     ☐ add read only handler to all admin pages (except dashboard)
 
 Admin Volunteers:
-    ☐ get all skills in beforeEnter
+    ✔ get all skills in beforeEnter @done(25-09-23 07:15)
     ✔ add search for skills to table @done(25-09-16 07:22)
     ☐ need CRUD for each volunteer
     ☐ need active/inactive method
@@ -71,3 +71,5 @@ Audition Contacts:
 
 ☐ add class management (with enrolled) to admin area
     payment methods for enrollment?
+
+☐ add a "follow up" method for payments that lets user enter the data & sends the email to the appropriate place directly from the site.
