--- a/frontend/TODO
+++ b/frontend/TODO
@@ -14,12 +14,12 @@ Read Only:
 Admin Volunteers:
     ✔ get all skills in beforeEnter @done(25-09-23 07:15)
     ✔ add search for skills to table @done(25-09-16 07:22)
-    ☐ need CRUD for each volunteer
-    ☐ need active/inactive method
+    ✔ need CRUD for each volunteer @done(25-09-23 09:49)
+    ✔ need active/inactive method @done(25-09-23 09:49)
 
 Admin Section needs:
     ✔ announcement-banner @done(25-09-15 12:10)
-    ☐ volunteers
+    ✔ volunteers @done(25-09-23 09:49)
     ☐ tickets
     ✔ shows @done(25-09-15 12:10)
     ☐ patrons
@@ -73,3 +73,7 @@ Audition Contacts:
     payment methods for enrollment?
 
 ☐ add a "follow up" method for payments that lets user enter the data & sends the email to the appropriate place directly from the site.
+
+☐ mailchimp tie-in
+
+☐ switch from sendgrid (already removed) to mailersend (see madb for reference)
