--- a/frontend/TODO
+++ b/frontend/TODO
@@ -1,21 +1,10 @@
-☐ $25 button (wait for Scott's verbiage) [https://fixr.co/event/25-donation-to-azuay-community-theater-tickets-618404995]
+☐ class management
+☐ class page
 
 ---
 
-✔ set up an announcement banner on home page @done(25-09-05 15:23)
-✔ setup admin for announcement banner @done(25-09-14 10:44)
-✔ need /flex-purchase page @done(25-09-14 05:36)
-
-✔ Set up Join Mailing List @done(25-09-14 21:56)
-
 Read Only:
     ☐ add read only handler to all admin pages (except dashboard)
-
-Admin Volunteers:
-    ✔ get all skills in beforeEnter @done(25-09-23 07:15)
-    ✔ add search for skills to table @done(25-09-16 07:22)
-    ✔ need CRUD for each volunteer @done(25-09-23 09:49)
-    ✔ need active/inactive method @done(25-09-23 09:49)
 
 Admin Section needs:
     ✔ announcement-banner @done(25-09-15 12:10)
@@ -25,55 +14,11 @@ Admin Section needs:
     ☐ patrons
     ☐ donations
     ✔ users @done(25-09-15 12:10)
-    ☐ contacts
+    ✔ contacts @done(25-09-25 07:46)
     ✔ site config @done(25-09-15 12:10)
     ☐ payments
-
-☐ add an "audition" button to admin/edit-show to allow admin to set audition information for that show
-
-Auditions Table:
-    ☐ show_id
-    ☐ display_date: date
-    ☐ script: file
-    ☐ director_email: email for people to contact director about audition
-    ☐ first_read
-    ☐ rehearsals_start
-    ☐ about
-Audition Sessions:
-    ☐ audition_id
-    ☐ session
-    ☐ location_name
-    ☐ location_address
-    ☐ location_map_link
-    ☐ notes
-Audition Roles:
-    ☐ audition_id
-    ☐ sex
-    ☐ name
-    ☐ info
-    ☐ side
-Audition Contacts:
-    ☐ audition_id
-    ☐ name
-    ☐ role
-    ☐ email
-    ☐ phone
-    ☐ body
-    ☐ sendgrid_response
-
-
-
-✔ fixr setup @done(25-09-14 05:36)
-
-✔ add fixr link to show record @done(25-09-14 05:37)
-
-☐ audition roster in admin area
 
 ☐ add class management (with enrolled) to admin area
     payment methods for enrollment?
 
-☐ add a "follow up" method for payments that lets user enter the data & sends the email to the appropriate place directly from the site.
-
 ☐ mailchimp tie-in
-
-☐ switch from sendgrid (already removed) to mailersend (see madb for reference)
