--- a/frontend/TODO
+++ b/frontend/TODO
@@ -1,13 +1,9 @@
-✔ gallery admin - add ordering to the gallery images @done(25-11-02 22:39)
-☐ flex purchase admin
-☐ set up users to automatically have full priveleges for each level
-☐ PerformanceController::updateFixrLink
+☐ fix the per ticket price (it's currently set for flex tix)
 
 ☐ class management
 ☐ class page
 ☐ fix class `/images` calls
 
-☐ modify the gallery carousel controls
 
 ---
 
