Added our angels

--- a/frontend/TODO
+++ b/frontend/TODO
@@ -1,4 +1,12 @@
-☐ fix the per ticket price (it's currently set for flex tix)
+✔ fix the per ticket price (it's currently set for flex tix) @done(25-11-13 15:26)
+☐ /angel: payment options
+☐ /support-us: payment options
+
+✔ add support us @done(25-11-15 17:09)
+✔ change be an angel @done(25-11-15 17:09)
+✔ add our angels @done(25-11-15 18:28)
+
+☐ add admin for angels
 
 ☐ class management
 ☐ class page
