Initial work on classes admin

--- a/TODO
+++ b/TODO
@@ -7,3 +7,4 @@ Questions for Rick:
         - sold_out_target
         - snippets
 
+☐ add instructor photo & poster to Course model to append/delete automatically
